# llms-txt-kit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: llms.txt
src/llmstxt/: __init__.py  cli.py
tests/: test_llmstxt.py
